--- a/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes-rtl.css
+++ b/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes-rtl.css
@@ -2,7 +2,7 @@
  * ************************************************
  * Uix Custom Metaboxes (RTL)
  *
- * @version		: 1.2 (July 13, 2018)
+ * @version		: 1.3 (September 17, 2019)
  * @author 		: UIUX Lab
  * @author URI 	: https://uiux.cc
  * @license     : MIT
@@ -10,7 +10,21 @@
  *************************************************
  */
 
-.uix-cmb__text--p {
+/*
+ * 2. Basic
+ * 3. Button
+ * 6. Upload Media Control
+ * 8. Custom Attributes
+*/
+
+
+
+/* 
+ ---------------------------
+ 2. Basic
+ ---------------------------
+ */ 
+.uix-slideshow-cmb__text--p {
 	border-right: none;
 	margin-right: auto;
 	border-left: 1px solid #E9E9E9;
@@ -26,7 +40,7 @@
 
 
 
-table.uix-cmb tr th {
+table.uix-slideshow-cmb tr th {
     text-align: left;
 }
 
@@ -35,7 +49,7 @@ table.uix-cmb tr th {
 @media (max-width: 768px) {
 
 	
-    table.uix-cmb tr th {
+    table.uix-slideshow-cmb tr th {
         text-align: right;
     }
 
@@ -43,51 +57,93 @@ table.uix-cmb tr th {
 }
 
 
-.uix-cmb__description {
+.uix-slideshow-cmb__description {
 	padding-right: 10px;
 }
 
+.uix-slideshow-cmb__text--div--toggle .uix-slideshow-cmb__custom-attributes-field__removebtn {
+    right: auto;
+    left: 3px;
+}
+
+.uix-slideshow-cmb__text--div--toggle__trigger svg {
+    margin-right: auto;
+    margin-left: 5px;
+}
 
 
-.uix-cmb__upload-wrapper input {
+/* 
+ ---------------------------
+ 3. Button
+ ---------------------------
+ */ 
+.uix-slideshow-cmb__btn svg {
+    margin-right: auto;
+    margin-left: 5px;
+}
+
+.uix-slideshow-cmb__removebtn svg {
+    transform: translate(2.5px,-2.5px);
+}
+
+
+/* 
+ ---------------------------
+ 6. Upload Media Control
+ ---------------------------
+ */ 
+.uix-slideshow-cmb__upload-wrapper input {
 	text-align: left;
 	left: auto;
 	right: 0;
 }
 
 
-.uix-cmb__upload-wrapper .uix-cmb__btn i {;
+.uix-slideshow-cmb__upload-wrapper .uix-slideshow-cmb__btn i {;
 	padding-right: auto;
 	padding-left: 5px;
 
 }
 
 
-.uix-cmb__upload-wrapper .remove-btn {
+.uix-slideshow-cmb__upload-wrapper .uix-slideshow-cmb__removebtn {
 	left: auto;
 	right: 0;
 }
 
 
-.uix-cmb__upload-wrapper .remove-btn:after {
+.uix-slideshow-cmb__upload-wrapper .uix-slideshow-cmb__removebtn:after {
 	left: auto;
 	right: 0;
 }
 
-.uix-cmb__custom-attributes-field table td {
+
+
+/* 
+ ---------------------------
+ 8. Custom Attributes
+ ---------------------------
+ */ 
+.uix-slideshow-cmb__custom-attributes-field table td {
 	text-align: right;
 }
 
 
-.uix-cmb__custom-attributes-field__removebtn {
+.uix-slideshow-cmb__custom-attributes-field__removebtn {
 	right: auto;
 	left: -30px;
 }
 
 
-#side-sortables .uix-cmb__custom-attributes-field__removebtn {
+#side-sortables .uix-slideshow-cmb__custom-attributes-field__removebtn {
 	right: 210px;
 	left: auto;
 }
 
+
+.uix-slideshow-cmb__custom-attributes-field__addbtn svg,
+.uix-slideshow-cmb__custom-attributes-field__removebtn svg {
+    margin-right: auto;
+    margin-left: 5px;
+}
 
