--- a/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes-rtl.css
+++ b/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes-rtl.css
@@ -2,7 +2,7 @@
  * ************************************************
  * Uix Custom Metaboxes (RTL)
  *
- * @version		: 1.4 (November 11, 2019)
+ * @version		: 1.5 (November 19, 2019)
  * @author 		: UIUX Lab
  * @author URI 	: https://uiux.cc
  * @license     : MIT
@@ -91,6 +91,7 @@ table.uix-slideshow-cmb tr th {
 }
 
 
+
 /* 
  ---------------------------
  3. Button
@@ -177,5 +178,12 @@ table.uix-slideshow-cmb tr th {
 .uix-slideshow-cmb__custom-attributes-field__addbtn--multi {
     border-right: 1px solid #ECF9FF;
     border-left: 1px solid #b5dbf5;
+}
+
+
+
+.uix-slideshow-cmb__custom-attributes-field__sortablebtn {
+    right: auto;
+    left: 30px;
 }
 
