--- a/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes.css
+++ b/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes.css
@@ -2,7 +2,7 @@
  * ************************************************
  * Uix Custom Metaboxes
  *
- * @version		: 1.4 (November 11, 2019)
+ * @version		: 1.5 (November 19, 2019)
  * @author 		: UIUX Lab
  * @author URI 	: https://uiux.cc
  * @license     : MIT
@@ -906,6 +906,15 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 
 
 
+.uix-slideshow-cmb__custom-attributes-field__sortablebtn {
+	position: absolute;
+    right: 30px;
+    top: 10px;
+    cursor: move;
+}
+.uix-slideshow-cmb__custom-attributes-field__sortablebtn svg g {
+    fill: #ddd;
+}
 
 
 
