--- a/includes/admin/css/style.css
+++ b/includes/admin/css/style.css
@@ -1,1 +1,128 @@
-.uix-slideshow-dialog{width:500px;height:440px;padding:20px 0 0 20px;background:#e8e8e8;border:1px solid #dadada;font-family:sans-serif;-webkit-box-shadow:0 1px 15px rgba(0,0,0,.8);-moz-box-shadow:0 1px 15px rgba(0,0,0,.8);box-shadow:0 1px 15px rgba(0,0,0,.8);position:absolute;top:50%;margin-top:-250px;left:50%;margin-left:-250px;display:none;z-index:9999999;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}.uix-slideshow-dialog-mask{display:none;z-index:9999998;background:rgba(0,0,0,.8);position:fixed;top:0;left:0;height:100%;width:100%;}.uix-slideshow-dialog textarea{width:100%;height:90%;}.uix-slideshow-dialog .close{display:inline-block;margin-top:3px;}@media all and (max-width:540px){.uix-slideshow-dialog{width:300px;margin-left:-170px;}}.button-remove{background:#DD421A !important;border-color:#DD421A #DD421A #DD421A !important;-webkit-box-shadow:0 1px 0 #DD421A !important;box-shadow:0 1px 0 #A10508 !important;color:#fff !important;text-decoration:none !important;text-shadow:0 -1px 1px #A10508,1px 0 1px #A10508,0 1px 1px #A10508,-1px 0 1px #A10508 !important;}.uix-plug-note{position:relative;clear:both;background:#FCDBD6;border:1px solid #ECD5D8;-webkit-box-shadow:0 1px 1px 0 rgba(255,255,255,.1);box-shadow:0 1px 1px 0 rgba(255,255,255,.1);margin:5px 2px 2px 0;padding:1px 12px;border-color:#f5df52;background:#fcf7d4;box-shadow:inset 0 0 0 1px #ffffff,0 0 10px 0 rgba(0,0,0,0.05);}.uix-plug-note p{margin:.5em 0;padding:2px;}.uix-plug-info{position:relative;clear:both;background:#FFFFFF;border:1px solid #ECECEC;border-left:3px solid #C8C8C8;-webkit-box-shadow:0 1px 1px 0 rgba(255,255,255,.1);box-shadow:0 1px 1px 0 rgba(255,255,255,.1);margin:5px 2px 2px 0;padding:1px 12px;box-shadow:inset 0 0 0 1px #ffffff,0 0 10px 0 rgba(0,0,0,0.05);}.uix-plug-info p{margin:.5em 0;padding:2px;}
+/*
+	---------------------------
+	TABLE OF CONTENTS
+	---------------------------
+	
+	1. Code Preview Container
+	2. Button   
+    3. Uix Plugins Tips          
+	4. Hide TinyMCE Editor
+
+*/
+
+
+/* ====================================================== 
+   1. Code Preview Container                               
+/* ====================================================== */
+.uix-slideshow-dialog {
+    width: 500px;
+    height: 440px;
+    padding: 20px 0 0 20px;
+    background: #e8e8e8;
+    border: 1px solid #dadada;
+    font-family: sans-serif;
+    -webkit-box-shadow: 0 1px 15px rgba(0,0,0,.8);
+    -moz-box-shadow: 0 1px 15px rgba(0,0,0,.8);
+    box-shadow: 0 1px 15px rgba(0,0,0,.8);
+    position: absolute;
+    top: 50%;
+    margin-top: -250px;
+    left: 50%;
+    margin-left: -250px;
+    display: none;
+    z-index: 9999999;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.uix-slideshow-dialog-mask {
+    display: none;
+    z-index: 9999998;
+    background: rgba(0,0,0,.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.uix-slideshow-dialog textarea {
+    width: 100%;
+    height: 90%;
+}
+
+.uix-slideshow-dialog .close {
+    display: inline-block;
+    margin-top: 3px;
+}
+
+@media all and (max-width: 540px) {
+	
+    .uix-slideshow-dialog {
+        width: 300px;
+        margin-left: -170px;
+    }
+}
+
+
+/* ====================================================== 
+   2. Button                           
+/* ====================================================== */
+.button-remove {
+    background: #DD421A !important;
+    border-color: #DD421A #DD421A #DD421A !important;
+    -webkit-box-shadow: 0 1px 0 #DD421A !important;
+    box-shadow: 0 1px 0 #A10508 !important;
+    color: #fff !important;
+    text-decoration: none !important;
+    text-shadow: 0 -1px 1px #A10508,1px 0 1px #A10508,0 1px 1px #A10508,-1px 0 1px #A10508 !important;
+}
+
+
+/* ====================================================== 
+   3. Uix Plugins Tips                           
+/* ====================================================== */
+.uix-plug-note {
+    position: relative;
+    clear: both;
+    background: #FCDBD6;
+    border: 1px solid #ECD5D8;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(255,255,255,.1);
+    box-shadow: 0 1px 1px 0 rgba(255,255,255,.1);
+    margin: 5px 2px 2px 0;
+    padding: 1px 12px;
+    border-color: #f5df52;
+    background: #fcf7d4;
+    box-shadow: inset 0 0 0 1px #ffffff, 0 0 10px 0 rgba(0, 0, 0, 0.05);
+}
+
+.uix-plug-note p {
+    margin: .5em 0;
+    padding: 2px;
+}
+
+.uix-plug-info {
+    position: relative;
+    clear: both;
+    background: #FFFFFF;
+    border: 1px solid #ECECEC;
+	border-left: 3px solid #C8C8C8;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(255,255,255,.1);
+    box-shadow: 0 1px 1px 0 rgba(255,255,255,.1);
+    margin: 5px 2px 2px 0;
+    padding: 1px 12px;
+    box-shadow: inset 0 0 0 1px #ffffff, 0 0 10px 0 rgba(0, 0, 0, 0.05);
+}
+
+.uix-plug-info p {
+    margin: .5em 0;
+    padding: 2px;
+}
+
+/* ====================================================== 
+   4. Hide TinyMCE Editor                 
+/* ====================================================== */
+body.wp-admin.post-type-uix-slideshow  #postdivrich {
+    display: none;
+}
