--- a/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes.css
+++ b/includes/admin/uix-custom-metaboxes/css/uix-custom-metaboxes.css
@@ -2,7 +2,7 @@
  * ************************************************
  * Uix Custom Metaboxes
  *
- * @version		: 1.7 (October 13, 2020)
+ * @version		: 1.8 (October 21, 2020))
  * @author 		: UIUX Lab
  * @author URI 	: https://uiux.cc
  * @license     : MIT
@@ -38,7 +38,10 @@
     width: calc(100% - 20px);
 }
 
-
+.uix-slideshow-cmb__mce-editor div.mce-toolbar-grp {
+    border-bottom: 1px solid #fff;
+    background: #f9f9f9;
+}
 
 /* 
  ---------------------------
@@ -50,15 +53,41 @@
 	overflow: hidden;
 }
 
+.uix-slideshow-cmb__wrapper ::placeholder {
+	color: #D2D2D2;
+}
+
+
+.uix-slideshow-cmb__wrapper input[type=color], 
+.uix-slideshow-cmb__wrapper input[type=date], 
+.uix-slideshow-cmb__wrapper input[type=datetime-local], 
+.uix-slideshow-cmb__wrapper input[type=datetime], 
+.uix-slideshow-cmb__wrapper input[type=email], 
+.uix-slideshow-cmb__wrapper input[type=month], 
+.uix-slideshow-cmb__wrapper input[type=number], 
+.uix-slideshow-cmb__wrapper input[type=password], 
+.uix-slideshow-cmb__wrapper input[type=search], 
+.uix-slideshow-cmb__wrapper input[type=tel], 
+.uix-slideshow-cmb__wrapper input[type=text], 
+.uix-slideshow-cmb__wrapper input[type=time], 
+.uix-slideshow-cmb__wrapper input[type=url], 
+.uix-slideshow-cmb__wrapper input[type=week], 
+.uix-slideshow-cmb__wrapper select, 
+.uix-slideshow-cmb__wrapper textarea {
+    border-color: #D3D3D3;
+}
+
+
+.uix-slideshow-cmb__wrapper .wp-picker-container .wp-color-result {
+    border-color: #D3D3D3;
+}
+
 /* Use only one column as a separate module */
 .uix-slideshow-cmb__wrapper--one-column {
     text-align: left;
     padding-left: 10px;
 }
 
-.uix-slideshow-cmb__wrapper--one-column > #uix_slideshow_gallery_append {
-    margin-top: 10px;
-}
 
 @media (max-width: 768px) {
     
@@ -189,22 +218,22 @@
 }
 
 
-#side-sortables .uix-slideshow-cmb__text--p {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__text--p {
 	float: none;
 	width: 100%;
 	border-right: none;
 }
 
-#side-sortables .uix-slideshow-cmb__text--p input {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__text--p input {
 	width: 190px !important;
 }
 
-#side-sortables .uix-slideshow-cmb__text--p:first-child input {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__text--p:first-child input {
 	width: 150px !important;
 }
 
 
-#side-sortables .uix-slideshow-cmb__text--div {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__text--div {
 	border-bottom: 1px solid #E9E9E9;
 	margin-bottom: 10px;
 }
@@ -231,7 +260,7 @@
 }
 
 
-td .uix-slideshow-cmb__text--p:last-child {
+body.uix-slideshow-cmb__bodyclass td .uix-slideshow-cmb__text--p:last-child {
 	border: none;
 }
 
@@ -255,17 +284,17 @@ table.uix-slideshow-cmb th.uix-slideshow-cmb__title {
 }
 
 
-#side-sortables .wp-picker-container .iris-slider {
+body.uix-slideshow-cmb__bodyclass #side-sortables .wp-picker-container .iris-slider {
 	margin-left: -10px;
 }
 
-#side-sortables .uix-slideshow-cmb__normal-text {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__normal-text {
 	max-width: 95%;
 }
 
 
-#side-sortables th,
-#side-sortables tr > td {
+body.uix-slideshow-cmb__bodyclass #side-sortables th,
+body.uix-slideshow-cmb__bodyclass #side-sortables tr > td {
 	width: 99%;
 	float: left;
 	text-align: left;
@@ -273,24 +302,24 @@ table.uix-slideshow-cmb th.uix-slideshow-cmb__title {
 
 
 
-#side-sortables th {
+body.uix-slideshow-cmb__bodyclass #side-sortables th {
 	padding: 10px;
 	padding-bottom: 0;
 }
 
-#side-sortables tr > td {
+body.uix-slideshow-cmb__bodyclass #side-sortables tr > td {
 	padding-top: 3px;
 }
 
-#side-sortables tr {
+body.uix-slideshow-cmb__bodyclass #side-sortables tr {
 	border-bottom: 1px solid #E9E9E9;
 }
 
-#side-sortables .uix-slideshow-cmb__description {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__description {
 	padding-right: 10px;
 }
 
-#side-sortables .uix-slideshow-cmb__radio-selector label {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__radio-selector label {
 	display: block;
 	padding: 5px 0;
 }
@@ -887,7 +916,7 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 }
 
 
-#side-sortables .uix-slideshow-cmb__custom-attributes-field__addbtn {
+body.uix-slideshow-cmb__bodyclass #side-sortables .uix-slideshow-cmb__custom-attributes-field__addbtn {
 	padding-top: 10px;
 }
 
@@ -905,7 +934,6 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 }
 
 
-
 .uix-slideshow-cmb__custom-attributes-field__sortablebtn {
 	position: absolute;
     right: 30px;
@@ -917,7 +945,6 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 }
 
 
-
 /* 
  ---------------------------
  9. Date Picker
@@ -926,7 +953,7 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 /*! jQuery UI - v1.12.1 - 2016-09-14
 * http://jqueryui.com
 * Copyright (c) 2013 jQuery Foundation and other contributors Licensed MIT */
-.ui-datepicker {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker {
 	width: 17em;
 	padding: .7em 1em 0 .7em !important;
 	display: none;
@@ -941,7 +968,7 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 }
 
 
-.ui-datepicker .ui-icon {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-icon {
 	background: #B5B8BC !important;
 	color: #fff !important;
 	-webkit-border-radius: 25px !important; 
@@ -958,15 +985,15 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 	
 }
 
-.ui-datepicker .ui-corner-all {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-corner-all {
 	background: none !important;
 	border: none !important;
 }
 
 
 
-.ui-datepicker .ui-icon.ui-icon-circle-triangle-e,
-.ui-datepicker .ui-icon.ui-icon-circle-triangle-w {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-icon.ui-icon-circle-triangle-e,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-icon.ui-icon-circle-triangle-w {
     width: 20px !important;
     height: 20px !important;
     margin-left: 0 !important;  
@@ -975,22 +1002,22 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
     cursor: pointer !important;
 }
 
-.ui-datepicker .ui-icon.ui-icon-circle-triangle-w {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-icon.ui-icon-circle-triangle-w {
     margin-left: -15px !important;
 }
-.ui-datepicker .ui-icon.ui-icon-circle-triangle-e {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-icon.ui-icon-circle-triangle-e {
     margin-left: -5px !important;
 }
 
 
-.ui-datepicker .ui-datepicker-header {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-header {
 	background: none !important;
 	border: none !important;
 }
 
-.ui-datepicker .ui-state-default, 
-.ui-datepicker .ui-widget-content .ui-state-default, 
-.ui-datepicker .ui-widget-header .ui-state-default {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-state-default, 
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-widget-content .ui-state-default, 
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-widget-header .ui-state-default {
     border: none !important;
     background: rgba(255,255,255,0) !important;
     color: #595959 !important;;
@@ -999,41 +1026,41 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 
 
 
-.ui-datepicker .ui-state-highlight {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-state-highlight {
 	color: #D54E21  !important;
 	background: rgba(0,0,0,0) !important;
 	font-weight: bold !important;
 }
 
-.ui-datepicker .ui-datepicker-header {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-header {
 	position: relative;
 	padding: .2em 0;
 }
-.ui-datepicker .ui-datepicker-prev,
-.ui-datepicker .ui-datepicker-next {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-prev,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-next {
 	position: absolute;
 	top: 2px;
 	width: 1.8em;
 	height: 1.8em;
 }
-.ui-datepicker .ui-datepicker-prev-hover,
-.ui-datepicker .ui-datepicker-next-hover {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-prev-hover,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-next-hover {
 	top: 1px;
 }
-.ui-datepicker .ui-datepicker-prev {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-prev {
 	left: 2px;
 }
-.ui-datepicker .ui-datepicker-next {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-next {
 	right: 2px;
 }
-.ui-datepicker .ui-datepicker-prev-hover {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-prev-hover {
 	left: 1px;
 }
-.ui-datepicker .ui-datepicker-next-hover {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-next-hover {
 	right: 1px;
 }
-.ui-datepicker .ui-datepicker-prev span,
-.ui-datepicker .ui-datepicker-next span {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-prev span,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-next span {
 	display: block;
 	position: absolute;
 	left: 50%;
@@ -1041,43 +1068,43 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 	top: 50%;
 	margin-top: -8px;
 }
-.ui-datepicker .ui-datepicker-title {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-title {
 	margin: 0 2.3em;
 	line-height: 1.8em;
 	text-align: center;
 }
-.ui-datepicker .ui-datepicker-title select {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-title select {
 	font-size: 1em;
 	margin: 1px 0;
 }
-.ui-datepicker select.ui-datepicker-month,
-.ui-datepicker select.ui-datepicker-year {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker select.ui-datepicker-month,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker select.ui-datepicker-year {
 	width: 45%;
 }
-.ui-datepicker table {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker table {
 	width: 100%;
 	font-size: .9em;
 	border-collapse: collapse;
 	margin: 0 0 .4em;
 }
-.ui-datepicker th {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker th {
 	padding: .7em .3em;
 	text-align: center;
 	font-weight: bold;
 	border: 0;
 }
-.ui-datepicker td {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker td {
 	border: 0;
 	padding: 1px;
 }
-.ui-datepicker td span,
-.ui-datepicker td a {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker td span,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker td a {
 	display: block;
 	padding: .2em;
 	text-align: right;
 	text-decoration: none;
 }
-.ui-datepicker .ui-datepicker-buttonpane {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-buttonpane {
 	background-image: none;
 	margin: .7em 0 0 0;
 	padding: 0 .2em;
@@ -1085,7 +1112,7 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 	border-right: 0;
 	border-bottom: 0;
 }
-.ui-datepicker .ui-datepicker-buttonpane button {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-buttonpane button {
 	float: right;
 	margin: .5em .2em .4em;
 	cursor: pointer;
@@ -1093,77 +1120,83 @@ table.uix-slideshow-cmb .uix-slideshow-cmb__label {
 	width: auto;
 	overflow: visible;
 }
-.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current {
 	float: left;
 }
 
 /* with multiple calendars */
-.ui-datepicker.ui-datepicker-multi {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker.ui-datepicker-multi {
 	width: auto;
 }
-.ui-datepicker-multi .ui-datepicker-group {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi .ui-datepicker-group {
 	float: left;
 }
-.ui-datepicker-multi .ui-datepicker-group table {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi .ui-datepicker-group table {
 	width: 95%;
 	margin: 0 auto .4em;
 }
-.ui-datepicker-multi-2 .ui-datepicker-group {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi-2 .ui-datepicker-group {
 	width: 50%;
 }
-.ui-datepicker-multi-3 .ui-datepicker-group {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi-3 .ui-datepicker-group {
 	width: 33.3%;
 }
-.ui-datepicker-multi-4 .ui-datepicker-group {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi-4 .ui-datepicker-group {
 	width: 25%;
 }
-.ui-datepicker-multi .ui-datepicker-group-last .ui-datepicker-header,
-.ui-datepicker-multi .ui-datepicker-group-middle .ui-datepicker-header {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi .ui-datepicker-group-last .ui-datepicker-header,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi .ui-datepicker-group-middle .ui-datepicker-header {
 	border-left-width: 0;
 }
-.ui-datepicker-multi .ui-datepicker-buttonpane {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-multi .ui-datepicker-buttonpane {
 	clear: left;
 }
-.ui-datepicker-row-break {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-row-break {
 	clear: both;
 	width: 100%;
 	font-size: 0;
 }
 
 /* RTL support */
-.ui-datepicker-rtl {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl {
 	direction: rtl;
 }
-.ui-datepicker-rtl .ui-datepicker-prev {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-prev {
 	right: 2px;
 	left: auto;
 }
-.ui-datepicker-rtl .ui-datepicker-next {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-next {
 	left: 2px;
 	right: auto;
 }
-.ui-datepicker-rtl .ui-datepicker-prev:hover {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-prev:hover {
 	right: 1px;
 	left: auto;
 }
-.ui-datepicker-rtl .ui-datepicker-next:hover {
+.body.uix-slideshow-cmb__bodyclass ui-datepicker-rtl .ui-datepicker-next:hover {
 	left: 1px;
 	right: auto;
 }
-.ui-datepicker-rtl .ui-datepicker-buttonpane {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-buttonpane {
 	clear: right;
 }
-.ui-datepicker-rtl .ui-datepicker-buttonpane button {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-buttonpane button {
 	float: left;
 }
-.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current,
-.ui-datepicker-rtl .ui-datepicker-group {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-group {
 	float: right;
 }
-.ui-datepicker-rtl .ui-datepicker-group-last .ui-datepicker-header,
-.ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header {
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-group-last .ui-datepicker-header,
+body.uix-slideshow-cmb__bodyclass .ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header {
 	border-right-width: 0;
 	border-left-width: 1px;
+}
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-title select {
+    margin-right: 5px;
+}
+body.uix-slideshow-cmb__bodyclass .ui-datepicker .ui-datepicker-title select:last-child {
+    margin-right: 0;
 }
 
 
